<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/transparent"
        android:padding="16dp"
        tools:context=".RoomActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/room_number_title"
            android:ems="10"
            android:id="@+id/roomNumberEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/allergy_title"
            android:ems="10"
            android:id="@+id/allergyEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/plate_type_title"
            android:ems="10"
            android:id="@+id/plateTypeEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/chemical_diet_title"
            android:ems="10"
            android:id="@+id/chemicalDietEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/texture_diet_title"
            android:ems="10"
            android:id="@+id/textureDietEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/liquid_diet_title"
            android:ems="10"
            android:id="@+id/liquidDietEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/likes_title"
            android:ems="10"
            android:id="@+id/likesEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/dislikes_title"
            android:ems="10"
            android:id="@+id/dislikesEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/notes_title"
            android:ems="10"
            android:id="@+id/notesEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/meal_title"
            android:ems="10"
            android:id="@+id/mealEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/dessert_title"
            android:ems="10"
            android:id="@+id/dessertEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:hint="@string/beverage_title"
            android:ems="10"
            android:id="@+id/beverageEditText"/>

    </LinearLayout>
</ScrollView>