<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="10dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/lime500">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/facility"
            android:id="@+id/facility_name_textview"
            style="@style/content_main_textview_style"/>

        <TextView
            android:text="@string/facility_address"
            android:id="@+id/facility_address_textview"
            style="@style/content_main_textview_style"/>

        <TextView
            android:text="@string/facility_cencus"
            android:id="@+id/facility_census_textview"
            style="@style/content_main_textview_style"/>



    </LinearLayout>
</android.support.v7.widget.CardView>