<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:background="@color/transparent"
        android:padding="16dp"
        tools:context=".RoomActivity">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/meal_title"
            android:ems="10"
            android:id="@+id/mealEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:hint="@string/dessert_title"
            android:ems="10"
            android:id="@+id/dessertEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:hint="@string/beverage_title"
            android:ems="10"
            android:id="@+id/beverageEditText"/>
    </LinearLayout>
</ScrollView>